<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
   tools:context="com.odiousapps.kat.ui.recipedetail.RecipeDetailFragment">

   <data>
      <variable
         name="timerClickListener"
         type="com.odiousapps.kat.ui.recipedetail.TimerClickListener" />
   </data>

   <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent">

      <LinearLayout
          android:id="@+id/linearLayout3"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="vertical"
          android:animateLayoutChanges="true"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent">

         <View
             android:id="@+id/viewCooktimerPlaceholder"
             android:layout_width="match_parent"
             android:layout_height="64dp"
             tools:visibility="gone" />

         <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/pager"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1">

         </androidx.viewpager2.widget.ViewPager2>

         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tab_layout"
             style="@style/Widget.MaterialComponents.TabLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="top"
             android:contentDescription="@string/recipe_details_tabs"
             app:tabGravity="fill"
             app:tabMaxWidth="0dp"
             app:tabMode="auto"
             app:tabTextAppearance="@style/TextAppearance.MaterialComponents.Subtitle2" />

      </LinearLayout>

      <LinearLayout
          android:id="@+id/cookTimerLayout"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="end"
          android:layout_marginEnd="24dp"
          android:background="@drawable/round_border"
          android:backgroundTint="@color/colorPrimary"
          android:paddingTop="4dp"
          android:paddingBottom="4dp"
          android:visibility="gone"
          app:layout_constraintBottom_toBottomOf="@+id/backButton"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toTopOf="@+id/backButton">

         <TextView
             android:id="@+id/countTimerTxt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginEnd="8dp"
             android:paddingStart="8dp"
             android:paddingEnd="8dp"
             android:text="00:00:00"
             android:textAppearance="@style/TextAppearance.AppCompat.Headline"
             android:textColor="@android:color/white"
             tools:ignore="HardcodedText" />

         <ImageButton
             android:id="@+id/timerStartBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
             android:layout_marginEnd="8dp"
             android:background="@drawable/round_border"
             android:backgroundTint="@color/colorPrimaryDark"
             android:contentDescription="@string/play_btn"
             android:onClick="@{(view) -> timerClickListener.onTimerClicked(view)}"
             android:src="@drawable/ic_start"
             android:tag="Start" />

         <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
             android:layout_marginEnd="8dp"
             android:background="@drawable/round_border"
             android:backgroundTint="@color/colorPrimaryDark"
             android:contentDescription="@string/stop_btn"
             android:onClick="@{(view) -> timerClickListener.onTimerClicked(view)}"
             android:src="@drawable/ic_stop"
             android:tag="Stop" />

         <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="4dp"
             android:layout_marginEnd="8dp"
             android:background="@drawable/round_border"
             android:backgroundTint="@color/colorPrimaryDark"
             android:contentDescription="@string/cancel_btn"
             android:onClick="@{(view) -> timerClickListener.onTimerClicked(view)}"
             android:src="@drawable/ic_cancel"
             android:tag="Cancel" />

      </LinearLayout>

      <ImageButton
         android:id="@+id/backButton"
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:adjustViewBounds="true"
         android:background="@drawable/round_outline"
         android:backgroundTint="@color/colorPrimary"
         android:clipToOutline="true"
         android:scaleType="center"
         android:src="@drawable/md_nav_back"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:contentDescription="@string/back_button"/>
   </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
